--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92be74">  <td>20/11/22 18:36:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.test.HomePageTest@6631f5ca]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@210281271</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>20/11/22 18:37:28</td>   <td>31211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.crmLogoImageTest()[pri:1, instance:com.qa.test.HomePageTest@6631f5ca]">crmLogoImageTest</td> 
-  <td>main@210281271</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>20/11/22 18:37:28</td>   <td>31226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.cartValueTest()[pri:2, instance:com.qa.test.HomePageTest@6631f5ca]">cartValueTest</td> 
-  <td>main@210281271</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>20/11/22 18:37:28</td>   <td>31245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageTest()[pri:3, instance:com.qa.test.HomePageTest@6631f5ca]">homePageTest</td> 
-  <td>main@210281271</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>20/11/22 18:37:28</td>   <td>31255</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.test.HomePageTest@6631f5ca]">&lt;&lt;tearDown</td> 
+<tr bgcolor="91a895">  <td>21/04/10 00:06:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1608230649</td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.crmLogoImageTest()[pri:1, instance:com.qa.test.HomePageTest@262b2c86]">crmLogoImageTest</td> 
+  <td>main@1608230649</td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.cartValueTest()[pri:2, instance:com.qa.test.HomePageTest@262b2c86]">cartValueTest</td> 
+  <td>main@1608230649</td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageTest()[pri:3, instance:com.qa.test.HomePageTest@262b2c86]">homePageTest</td> 
+  <td>main@1608230649</td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91a895">  <td>21/04/10 00:06:12</td>   <td>1159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.test.HomePageTest@262b2c86]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
